<resources>
    <string name="app_name">trying</string>
    <string name="plainPass">password</string>
    <string name="plainEmail">email</string>
    <string name="btnLogin">Log in</string>
    <string name="btnCancel">Cancel</string>
    <string name="reEnterPlainPass">re password</string>
    <string name="Register_now">Register now</string>
    <string name="Sign_up">Sign up</string>
    <string name="Sign_in">Sign in</string>
    <string name="guest">Войти как гость</string>
    <string name="fgotPass">Forgot Password?</string>
    <string name="CreateAccount">Create an account</string>
    <string name="createAcText2">Complete the sign up procces to get started</string>
    <string name="Ivan">Ivan Ivanov</string>
    <string name="Full_Name">Full name</string>
    <string name="Phone_number">Phone Number</string>
    <string name="Phone_number2">+7(999)999-99-99</string>
    <string name="Email_Adress">Email Address</string>
    <string name="Email_Adress2">*********@mail.com</string>
    <string name="Password">Password</string>
    <string name="Passwrod2">***********</string>
    <string name="Confirm_Passwrod">Confirm Password</string>
    <string name="Confirm_Passwrod2">***********</string>
    <string name="Check_box">By ticking box, you agree to our Terms and\nconditions and private policy</string>
    <string name="text_under_button">"Already have an account? "</string>
    <string name="Welcome">Welcome Back</string>
    <string name="Fill">Fill your email and password to continue</string>
    <string name="Rem_pass">Remember password</string>
    <string name="fgotpass">Forgot Password</string>
    <string name="Enter">Enter your email adress</string>
    <string name="Send_otp">Send OTP</string>
    <string name="rem_pass">Remember password?</string>
    <string name="back">Back to</string>
    <string name="OTP_Verificaton">OTP Verification</string>
    <string name="Enter2">Enter the 6 digit numbers sent to your email</string>
    <string name="New_Pass">New Password</string>
    <string name="enter3">Enter new password</string>
    <string name="Profile">Profile</string>
</resources>