<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpScreen">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="169dp"
        android:fontFamily="@font/roboto"
        android:text="@string/CreateAccount"
        android:textColor="#3A3A3A"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lineHeight="30dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/createAcText2"
        android:textColor="#A7A7A7"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:lineHeight="16dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/Full_Name"
        android:textColor="#A7A7A7"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        app:lineHeight="16dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/Phone_number"
        android:textColor="#A7A7A7"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
        app:layout_constraintStart_toStartOf="@+id/editTextPhone" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/Email_Adress"
        android:textColor="#A7A7A7"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/Password"
        android:textColor="#A7A7A7"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/Confirm_Passwrod"
        android:textColor="#A7A7A7"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword2"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword2" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="342dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="23dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/Ivan"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:textColorHint="#CFCFCF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/Phone_number2"
        android:inputType="phone"
        android:paddingStart="10dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:textColorHint="#CFCFCF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextText"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/Email_Adress2"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:textColorHint="#CFCFCF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
        app:layout_constraintStart_toStartOf="@+id/editTextPhone"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/Passwrod2"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:textColorHint="#CFCFCF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"/>

    <EditText
        android:id="@+id/editTextPassword2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/Passwrod2"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:textColorHint="#CFCFCF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"

        android:button="@drawable/custom_checkbox"
        android:checked="false"
        android:fontFamily="@font/roboto"
        android:paddingStart="11dp"
        android:text="@string/Check_box"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword2"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword2"
        app:useMaterialThemeColors="false" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_button"
        android:text="@string/Sign_up"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword2"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword2"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="108dp"
        android:text="@string/text_under_button"
        android:textAlignment="center"
        android:textColor="#A7A7A7"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sign_in"
        android:textColor="#0560FA"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView9" />

</androidx.constraintlayout.widget.ConstraintLayout>