<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPassword">

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="71dp"
        android:background="@drawable/custom_button"
        android:text="@string/btnLogin"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword2"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword2"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword2" />

    <EditText
        android:id="@+id/editTextPassword2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/Passwrod2"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:textColorHint="#CFCFCF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/Confirm_Passwrod"
        android:textColor="#A7A7A7"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword2"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword2" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="372dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="303dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/Passwrod2"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:textColorHint="#CFCFCF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/Password"
        android:textColor="#A7A7A7"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="206dp"
        android:fontFamily="@font/roboto"
        android:text="@string/New_Pass"
        android:textColor="#3A3A3A"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lineHeight="30dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/enter3"
        android:textColor="#A7A7A7"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:lineHeight="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>